p4/y.output
Terminals which are not used

   T_PLUS_PLUS
   T_MINUS_MINUS
   T_ERROR


Grammar

    0 $accept: program $end

    1 program: declaration_list block_list

    2 declaration_list: declaration_list declaration
    3                 | empty

    4 declaration: variable_declaration T_SEMIC
    5            | object_declaration T_SEMIC
    6            | forward_declaration T_SEMIC

    7 variable_declaration: simple_type T_ID optional_initializer
    8                     | simple_type T_ID T_LBRACKET T_INT_CONSTANT T_RBRACKET

    9 simple_type: T_INT
   10            | T_DOUBLE
   11            | T_STRING

   12 optional_initializer: T_ASSIGN expression
   13                     | empty

   14 object_declaration: object_type T_ID T_LPAREN parameter_list_or_empty T_RPAREN
   15                   | object_type T_ID T_LBRACKET expression T_RBRACKET

   16 object_type: T_TRIANGLE
   17            | T_PIXMAP
   18            | T_CIRCLE
   19            | T_RECTANGLE
   20            | T_TEXTBOX

   21 parameter_list_or_empty: parameter_list
   22                        | empty

   23 parameter_list: parameter_list T_COMMA parameter
   24               | parameter

   25 parameter: T_ID T_ASSIGN expression

   26 forward_declaration: T_FORWARD T_ANIMATION T_ID T_LPAREN animation_parameter T_RPAREN

   27 block_list: block_list block
   28           | empty

   29 block: initialization_block
   30      | animation_block
   31      | on_block

   32 initialization_block: T_INITIALIZATION statement_block

   33 @1: /* empty */

   34 animation_block: T_ANIMATION T_ID T_LPAREN check_animation_parameter T_RPAREN T_LBRACE @1 statement_list T_RBRACE end_of_statement_block

   35 animation_parameter: object_type T_ID

   36 check_animation_parameter: T_TRIANGLE T_ID
   37                          | T_PIXMAP T_ID
   38                          | T_CIRCLE T_ID
   39                          | T_RECTANGLE T_ID
   40                          | T_TEXTBOX T_ID

   41 on_block: T_ON keystroke statement_block

   42 keystroke: T_SPACE
   43          | T_UPARROW
   44          | T_DOWNARROW
   45          | T_LEFTARROW
   46          | T_RIGHTARROW
   47          | T_LEFTMOUSE_DOWN
   48          | T_MIDDLEMOUSE_DOWN
   49          | T_RIGHTMOUSE_DOWN
   50          | T_LEFTMOUSE_UP
   51          | T_MIDDLEMOUSE_UP
   52          | T_RIGHTMOUSE_UP
   53          | T_MOUSE_MOVE
   54          | T_MOUSE_DRAG
   55          | T_AKEY
   56          | T_SKEY
   57          | T_DKEY
   58          | T_FKEY
   59          | T_HKEY
   60          | T_JKEY
   61          | T_KKEY
   62          | T_LKEY
   63          | T_WKEY
   64          | T_F1

   65 if_block: statement_block_creator statement end_of_statement_block
   66         | statement_block

   67 statement_block: T_LBRACE statement_block_creator statement_list T_RBRACE end_of_statement_block

   68 statement_block_creator: /* empty */

   69 end_of_statement_block: /* empty */

   70 statement_list: statement_list statement
   71               | empty

   72 statement: if_statement
   73          | for_statement
   74          | assign_statement T_SEMIC
   75          | print_statement T_SEMIC
   76          | exit_statement T_SEMIC

   77 if_statement: T_IF T_LPAREN expression T_RPAREN if_block
   78             | T_IF T_LPAREN expression T_RPAREN if_block T_ELSE if_block

   79 for_statement: T_FOR T_LPAREN statement_block_creator assign_statement end_of_statement_block T_SEMIC expression T_SEMIC statement_block_creator assign_statement end_of_statement_block T_RPAREN statement_block

   80 print_statement: T_PRINT T_LPAREN expression T_RPAREN

   81 exit_statement: T_EXIT T_LPAREN expression T_RPAREN

   82 assign_statement: variable T_ASSIGN expression
   83                 | variable T_PLUS_ASSIGN expression
   84                 | variable T_MINUS_ASSIGN expression

   85 variable: T_ID
   86         | T_ID T_LBRACKET expression T_RBRACKET
   87         | T_ID T_PERIOD T_ID
   88         | T_ID T_LBRACKET expression T_RBRACKET T_PERIOD T_ID

   89 expression: primary_expression
   90           | expression T_OR expression
   91           | expression T_AND expression
   92           | expression T_LESS_EQUAL expression
   93           | expression T_GREATER_EQUAL expression
   94           | expression T_LESS expression
   95           | expression T_GREATER expression
   96           | expression T_EQUAL expression
   97           | expression T_NOT_EQUAL expression
   98           | expression T_PLUS expression
   99           | expression T_MINUS expression
  100           | expression T_ASTERISK expression
  101           | expression T_DIVIDE expression
  102           | expression T_MOD expression
  103           | T_MINUS expression
  104           | T_NOT expression
  105           | math_operator T_LPAREN expression T_RPAREN
  106           | variable geometric_operator variable

  107 primary_expression: T_LPAREN expression T_RPAREN
  108                   | variable
  109                   | T_INT_CONSTANT
  110                   | T_TRUE
  111                   | T_FALSE
  112                   | T_DOUBLE_CONSTANT
  113                   | T_STRING_CONSTANT

  114 geometric_operator: T_TOUCHES
  115                   | T_NEAR

  116 math_operator: T_SIN
  117              | T_COS
  118              | T_TAN
  119              | T_ASIN
  120              | T_ACOS
  121              | T_ATAN
  122              | T_SQRT
  123              | T_ABS
  124              | T_FLOOR
  125              | T_RANDOM

  126 empty: /* empty */


Terminals, with rules where they appear

$end (0) 0
error (256)
T_INT (258) 9
T_DOUBLE (259) 10
T_STRING (260) 11
T_TRIANGLE (261) 16 36
T_PIXMAP (262) 17 37
T_CIRCLE (263) 18 38
T_RECTANGLE (264) 19 39
T_TEXTBOX (265) 20 40
T_FORWARD (266) 26
T_INITIALIZATION (267) 32
T_TRUE (268) 110
T_FALSE (269) 111
T_ON (270) 41
T_SPACE (271) 42
T_LEFTARROW (272) 45
T_RIGHTARROW (273) 46
T_UPARROW (274) 43
T_DOWNARROW (275) 44
T_LEFTMOUSE_DOWN (276) 47
T_MIDDLEMOUSE_DOWN (277) 48
T_RIGHTMOUSE_DOWN (278) 49
T_LEFTMOUSE_UP (279) 50
T_MIDDLEMOUSE_UP (280) 51
T_RIGHTMOUSE_UP (281) 52
T_MOUSE_MOVE (282) 53
T_MOUSE_DRAG (283) 54
T_F1 (284) 64
T_AKEY (285) 55
T_SKEY (286) 56
T_DKEY (287) 57
T_FKEY (288) 58
T_HKEY (289) 59
T_JKEY (290) 60
T_KKEY (291) 61
T_LKEY (292) 62
T_WKEY (293) 63
T_TOUCHES (294) 114
T_NEAR (295) 115
T_ANIMATION (296) 26 34
T_IF (297) 77 78
T_FOR (298) 79
T_ELSE (299) 78
T_EXIT (300) 81
T_LPAREN (301) 14 26 34 77 78 79 80 81 105 107
T_RPAREN (302) 14 26 34 77 78 79 80 81 105 107
T_LBRACE (303) 34 67
T_RBRACE (304) 34 67
T_LBRACKET (305) 8 15 86 88
T_RBRACKET (306) 8 15 86 88
T_SEMIC (307) 4 5 6 74 75 76 79
T_COMMA (308) 23
T_PERIOD (309) 87 88
T_ASSIGN (310) 12 25 82
T_PLUS_ASSIGN (311) 83
T_MINUS_ASSIGN (312) 84
T_PLUS_PLUS (313)
T_MINUS_MINUS (314)
T_ASTERISK (315) 100
T_DIVIDE (316) 101
T_MOD (317) 102
T_PLUS (318) 98
T_MINUS (319) 99 103
T_SIN (320) 116
T_COS (321) 117
T_TAN (322) 118
T_ASIN (323) 119
T_ACOS (324) 120
T_ATAN (325) 121
T_SQRT (326) 122
T_FLOOR (327) 124
T_ABS (328) 123
T_RANDOM (329) 125
T_LESS (330) 94
T_GREATER (331) 95
T_LESS_EQUAL (332) 92
T_GREATER_EQUAL (333) 93
T_EQUAL (334) 96
T_NOT_EQUAL (335) 97
T_AND (336) 91
T_OR (337) 90
T_NOT (338) 104
T_ID (339) 7 8 14 15 25 26 34 35 36 37 38 39 40 85 86 87 88
T_INT_CONSTANT (340) 8 109
T_DOUBLE_CONSTANT (341) 112
T_STRING_CONSTANT (342) 113
T_PRINT (343) 80
T_ERROR (344)
IF_NO_ELSE (345)
UNARY_OPS (346)


Nonterminals, with rules where they appear

$accept (92)
    on left: 0
program (93)
    on left: 1, on right: 0
declaration_list (94)
    on left: 2 3, on right: 1 2
declaration (95)
    on left: 4 5 6, on right: 2
variable_declaration (96)
    on left: 7 8, on right: 4
simple_type (97)
    on left: 9 10 11, on right: 7 8
optional_initializer (98)
    on left: 12 13, on right: 7
object_declaration (99)
    on left: 14 15, on right: 5
object_type (100)
    on left: 16 17 18 19 20, on right: 14 15 35
parameter_list_or_empty (101)
    on left: 21 22, on right: 14
parameter_list (102)
    on left: 23 24, on right: 21 23
parameter (103)
    on left: 25, on right: 23 24
forward_declaration (104)
    on left: 26, on right: 6
block_list (105)
    on left: 27 28, on right: 1 27
block (106)
    on left: 29 30 31, on right: 27
initialization_block (107)
    on left: 32, on right: 29
animation_block (108)
    on left: 34, on right: 30
@1 (109)
    on left: 33, on right: 34
animation_parameter (110)
    on left: 35, on right: 26
check_animation_parameter (111)
    on left: 36 37 38 39 40, on right: 34
on_block (112)
    on left: 41, on right: 31
keystroke (113)
    on left: 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59
    60 61 62 63 64, on right: 41
if_block (114)
    on left: 65 66, on right: 77 78
statement_block (115)
    on left: 67, on right: 32 41 66 79
statement_block_creator (116)
    on left: 68, on right: 65 67 79
end_of_statement_block (117)
    on left: 69, on right: 34 65 67 79
statement_list (118)
    on left: 70 71, on right: 34 67 70
statement (119)
    on left: 72 73 74 75 76, on right: 65 70
if_statement (120)
    on left: 77 78, on right: 72
for_statement (121)
    on left: 79, on right: 73
print_statement (122)
    on left: 80, on right: 75
exit_statement (123)
    on left: 81, on right: 76
assign_statement (124)
    on left: 82 83 84, on right: 74 79
variable (125)
    on left: 85 86 87 88, on right: 82 83 84 106 108
expression (126)
    on left: 89 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105
    106, on right: 12 15 25 77 78 79 80 81 82 83 84 86 88 90 91 92
    93 94 95 96 97 98 99 100 101 102 103 104 105 107
primary_expression (127)
    on left: 107 108 109 110 111 112 113, on right: 89
geometric_operator (128)
    on left: 114 115, on right: 106
math_operator (129)
    on left: 116 117 118 119 120 121 122 123 124 125,
    on right: 105
empty (130)
    on left: 126, on right: 3 13 22 28 71


state 0

    0 $accept: . program $end

    $default  reduce using rule 126 (empty)

    program           go to state 1
    declaration_list  go to state 2
    empty             go to state 3


state 1

    0 $accept: program . $end

    $end  shift, and go to state 4


state 2

    1 program: declaration_list . block_list
    2 declaration_list: declaration_list . declaration

    T_INT        shift, and go to state 5
    T_DOUBLE     shift, and go to state 6
    T_STRING     shift, and go to state 7
    T_TRIANGLE   shift, and go to state 8
    T_PIXMAP     shift, and go to state 9
    T_CIRCLE     shift, and go to state 10
    T_RECTANGLE  shift, and go to state 11
    T_TEXTBOX    shift, and go to state 12
    T_FORWARD    shift, and go to state 13

    $default  reduce using rule 126 (empty)

    declaration           go to state 14
    variable_declaration  go to state 15
    simple_type           go to state 16
    object_declaration    go to state 17
    object_type           go to state 18
    forward_declaration   go to state 19
    block_list            go to state 20
    empty                 go to state 21


state 3

    3 declaration_list: empty .

    $default  reduce using rule 3 (declaration_list)


state 4

    0 $accept: program $end .

    $default  accept


state 5

    9 simple_type: T_INT .

    $default  reduce using rule 9 (simple_type)


state 6

   10 simple_type: T_DOUBLE .

    $default  reduce using rule 10 (simple_type)


state 7

   11 simple_type: T_STRING .

    $default  reduce using rule 11 (simple_type)


state 8

   16 object_type: T_TRIANGLE .

    $default  reduce using rule 16 (object_type)


state 9

   17 object_type: T_PIXMAP .

    $default  reduce using rule 17 (object_type)


state 10

   18 object_type: T_CIRCLE .

    $default  reduce using rule 18 (object_type)


state 11

   19 object_type: T_RECTANGLE .

    $default  reduce using rule 19 (object_type)


state 12

   20 object_type: T_TEXTBOX .

    $default  reduce using rule 20 (object_type)


state 13

   26 forward_declaration: T_FORWARD . T_ANIMATION T_ID T_LPAREN animation_parameter T_RPAREN

    T_ANIMATION  shift, and go to state 22


state 14

    2 declaration_list: declaration_list declaration .

    $default  reduce using rule 2 (declaration_list)


state 15

    4 declaration: variable_declaration . T_SEMIC

    T_SEMIC  shift, and go to state 23


state 16

    7 variable_declaration: simple_type . T_ID optional_initializer
    8                     | simple_type . T_ID T_LBRACKET T_INT_CONSTANT T_RBRACKET

    T_ID  shift, and go to state 24


state 17

    5 declaration: object_declaration . T_SEMIC

    T_SEMIC  shift, and go to state 25


state 18

   14 object_declaration: object_type . T_ID T_LPAREN parameter_list_or_empty T_RPAREN
   15                   | object_type . T_ID T_LBRACKET expression T_RBRACKET

    T_ID  shift, and go to state 26


state 19

    6 declaration: forward_declaration . T_SEMIC

    T_SEMIC  shift, and go to state 27


state 20

    1 program: declaration_list block_list .
   27 block_list: block_list . block

    T_INITIALIZATION  shift, and go to state 28
    T_ON              shift, and go to state 29
    T_ANIMATION       shift, and go to state 30

    $default  reduce using rule 1 (program)

    block                 go to state 31
    initialization_block  go to state 32
    animation_block       go to state 33
    on_block              go to state 34


state 21

   28 block_list: empty .

    $default  reduce using rule 28 (block_list)


state 22

   26 forward_declaration: T_FORWARD T_ANIMATION . T_ID T_LPAREN animation_parameter T_RPAREN

    T_ID  shift, and go to state 35


state 23

    4 declaration: variable_declaration T_SEMIC .

    $default  reduce using rule 4 (declaration)


state 24

    7 variable_declaration: simple_type T_ID . optional_initializer
    8                     | simple_type T_ID . T_LBRACKET T_INT_CONSTANT T_RBRACKET

    T_LBRACKET  shift, and go to state 36
    T_ASSIGN    shift, and go to state 37

    $default  reduce using rule 126 (empty)

    optional_initializer  go to state 38
    empty                 go to state 39


state 25

    5 declaration: object_declaration T_SEMIC .

    $default  reduce using rule 5 (declaration)


state 26

   14 object_declaration: object_type T_ID . T_LPAREN parameter_list_or_empty T_RPAREN
   15                   | object_type T_ID . T_LBRACKET expression T_RBRACKET

    T_LPAREN    shift, and go to state 40
    T_LBRACKET  shift, and go to state 41


state 27

    6 declaration: forward_declaration T_SEMIC .

    $default  reduce using rule 6 (declaration)


state 28

   32 initialization_block: T_INITIALIZATION . statement_block

    T_LBRACE  shift, and go to state 42

    statement_block  go to state 43


state 29

   41 on_block: T_ON . keystroke statement_block

    T_SPACE             shift, and go to state 44
    T_LEFTARROW         shift, and go to state 45
    T_RIGHTARROW        shift, and go to state 46
    T_UPARROW           shift, and go to state 47
    T_DOWNARROW         shift, and go to state 48
    T_LEFTMOUSE_DOWN    shift, and go to state 49
    T_MIDDLEMOUSE_DOWN  shift, and go to state 50
    T_RIGHTMOUSE_DOWN   shift, and go to state 51
    T_LEFTMOUSE_UP      shift, and go to state 52
    T_MIDDLEMOUSE_UP    shift, and go to state 53
    T_RIGHTMOUSE_UP     shift, and go to state 54
    T_MOUSE_MOVE        shift, and go to state 55
    T_MOUSE_DRAG        shift, and go to state 56
    T_F1                shift, and go to state 57
    T_AKEY              shift, and go to state 58
    T_SKEY              shift, and go to state 59
    T_DKEY              shift, and go to state 60
    T_FKEY              shift, and go to state 61
    T_HKEY              shift, and go to state 62
    T_JKEY              shift, and go to state 63
    T_KKEY              shift, and go to state 64
    T_LKEY              shift, and go to state 65
    T_WKEY              shift, and go to state 66

    keystroke  go to state 67


state 30

   34 animation_block: T_ANIMATION . T_ID T_LPAREN check_animation_parameter T_RPAREN T_LBRACE @1 statement_list T_RBRACE end_of_statement_block

    T_ID  shift, and go to state 68


state 31

   27 block_list: block_list block .

    $default  reduce using rule 27 (block_list)


state 32

   29 block: initialization_block .

    $default  reduce using rule 29 (block)


state 33

   30 block: animation_block .

    $default  reduce using rule 30 (block)


state 34

   31 block: on_block .

    $default  reduce using rule 31 (block)


state 35

   26 forward_declaration: T_FORWARD T_ANIMATION T_ID . T_LPAREN animation_parameter T_RPAREN

    T_LPAREN  shift, and go to state 69


state 36

    8 variable_declaration: simple_type T_ID T_LBRACKET . T_INT_CONSTANT T_RBRACKET

    T_INT_CONSTANT  shift, and go to state 70


state 37

   12 optional_initializer: T_ASSIGN . expression

    T_TRUE             shift, and go to state 71
    T_FALSE            shift, and go to state 72
    T_LPAREN           shift, and go to state 73
    T_MINUS            shift, and go to state 74
    T_SIN              shift, and go to state 75
    T_COS              shift, and go to state 76
    T_TAN              shift, and go to state 77
    T_ASIN             shift, and go to state 78
    T_ACOS             shift, and go to state 79
    T_ATAN             shift, and go to state 80
    T_SQRT             shift, and go to state 81
    T_FLOOR            shift, and go to state 82
    T_ABS              shift, and go to state 83
    T_RANDOM           shift, and go to state 84
    T_NOT              shift, and go to state 85
    T_ID               shift, and go to state 86
    T_INT_CONSTANT     shift, and go to state 87
    T_DOUBLE_CONSTANT  shift, and go to state 88
    T_STRING_CONSTANT  shift, and go to state 89

    variable            go to state 90
    expression          go to state 91
    primary_expression  go to state 92
    math_operator       go to state 93


state 38

    7 variable_declaration: simple_type T_ID optional_initializer .

    $default  reduce using rule 7 (variable_declaration)


state 39

   13 optional_initializer: empty .

    $default  reduce using rule 13 (optional_initializer)


state 40

   14 object_declaration: object_type T_ID T_LPAREN . parameter_list_or_empty T_RPAREN

    T_ID  shift, and go to state 94

    $default  reduce using rule 126 (empty)

    parameter_list_or_empty  go to state 95
    parameter_list           go to state 96
    parameter                go to state 97
    empty                    go to state 98


state 41

   15 object_declaration: object_type T_ID T_LBRACKET . expression T_RBRACKET

    T_TRUE             shift, and go to state 71
    T_FALSE            shift, and go to state 72
    T_LPAREN           shift, and go to state 73
    T_MINUS            shift, and go to state 74
    T_SIN              shift, and go to state 75
    T_COS              shift, and go to state 76
    T_TAN              shift, and go to state 77
    T_ASIN             shift, and go to state 78
    T_ACOS             shift, and go to state 79
    T_ATAN             shift, and go to state 80
    T_SQRT             shift, and go to state 81
    T_FLOOR            shift, and go to state 82
    T_ABS              shift, and go to state 83
    T_RANDOM           shift, and go to state 84
    T_NOT              shift, and go to state 85
    T_ID               shift, and go to state 86
    T_INT_CONSTANT     shift, and go to state 87
    T_DOUBLE_CONSTANT  shift, and go to state 88
    T_STRING_CONSTANT  shift, and go to state 89

    variable            go to state 90
    expression          go to state 99
    primary_expression  go to state 92
    math_operator       go to state 93


state 42

   67 statement_block: T_LBRACE . statement_block_creator statement_list T_RBRACE end_of_statement_block

    $default  reduce using rule 68 (statement_block_creator)

    statement_block_creator  go to state 100


state 43

   32 initialization_block: T_INITIALIZATION statement_block .

    $default  reduce using rule 32 (initialization_block)


state 44

   42 keystroke: T_SPACE .

    $default  reduce using rule 42 (keystroke)


state 45

   45 keystroke: T_LEFTARROW .

    $default  reduce using rule 45 (keystroke)


state 46

   46 keystroke: T_RIGHTARROW .

    $default  reduce using rule 46 (keystroke)


state 47

   43 keystroke: T_UPARROW .

    $default  reduce using rule 43 (keystroke)


state 48

   44 keystroke: T_DOWNARROW .

    $default  reduce using rule 44 (keystroke)


state 49

   47 keystroke: T_LEFTMOUSE_DOWN .

    $default  reduce using rule 47 (keystroke)


state 50

   48 keystroke: T_MIDDLEMOUSE_DOWN .

    $default  reduce using rule 48 (keystroke)


state 51

   49 keystroke: T_RIGHTMOUSE_DOWN .

    $default  reduce using rule 49 (keystroke)


state 52

   50 keystroke: T_LEFTMOUSE_UP .

    $default  reduce using rule 50 (keystroke)


state 53

   51 keystroke: T_MIDDLEMOUSE_UP .

    $default  reduce using rule 51 (keystroke)


state 54

   52 keystroke: T_RIGHTMOUSE_UP .

    $default  reduce using rule 52 (keystroke)


state 55

   53 keystroke: T_MOUSE_MOVE .

    $default  reduce using rule 53 (keystroke)


state 56

   54 keystroke: T_MOUSE_DRAG .

    $default  reduce using rule 54 (keystroke)


state 57

   64 keystroke: T_F1 .

    $default  reduce using rule 64 (keystroke)


state 58

   55 keystroke: T_AKEY .

    $default  reduce using rule 55 (keystroke)


state 59

   56 keystroke: T_SKEY .

    $default  reduce using rule 56 (keystroke)


state 60

   57 keystroke: T_DKEY .

    $default  reduce using rule 57 (keystroke)


state 61

   58 keystroke: T_FKEY .

    $default  reduce using rule 58 (keystroke)


state 62

   59 keystroke: T_HKEY .

    $default  reduce using rule 59 (keystroke)


state 63

   60 keystroke: T_JKEY .

    $default  reduce using rule 60 (keystroke)


state 64

   61 keystroke: T_KKEY .

    $default  reduce using rule 61 (keystroke)


state 65

   62 keystroke: T_LKEY .

    $default  reduce using rule 62 (keystroke)


state 66

   63 keystroke: T_WKEY .

    $default  reduce using rule 63 (keystroke)


state 67

   41 on_block: T_ON keystroke . statement_block

    T_LBRACE  shift, and go to state 42

    statement_block  go to state 101


state 68

   34 animation_block: T_ANIMATION T_ID . T_LPAREN check_animation_parameter T_RPAREN T_LBRACE @1 statement_list T_RBRACE end_of_statement_block
